# cookiecutter-pypackage

./: 404.html  cookiecutter.json  index.html
advanced/feature_explanation/: index.html
getting-started/configure_github_repo/: index.html
getting-started/connect_to_remote_repo/: index.html
getting-started/create_local_project/: index.html
getting-started/publish_to_pypi/: index.html
getting-started/publish_to_test_pypi/: index.html
hooks/: post_gen_project.py
search/: search_index.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  {{cookiecutter.project_slug}}.py
